--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	
-	<style>
-		div{
-			background-color:yellow;
-			color: 100px;
-		}
-	<link rel="stylesheet" href="styles/all.css">
-	</style>
-	<link rel="stylesheet" href="styles/all.css">
-</head>
-<body>
-	<div>
-		完美世界小说简介：《完美世界小说》由起点超人气作者'辰东'最新巨作,讲述的是　一粒尘可填海，一根草斩尽日月星辰，弹指间天翻地覆。 群雄并起，万族林立，诸圣争霸，乱天动地。问苍茫大地，谁主沉浮？！ 一个少年从大荒中走出，一切从这里开始…… 《完美世界小说》文笔流畅、洒脱、新颖，情节内容绝对一流,所以我们要多多支持'辰东'写的更好更精彩,支持《完美世界小说》请您购买正版、或多多帮助宣传、推荐本书,好的小说,有了您们的支持才能更精彩! 完美世界小说小说网每天第一时间更新《完美世界小说》最新章节,欢迎收藏。
+一时间更新《完美世界小说》最新章节,欢迎收藏。
 完美世界小说作品相关
 看完完美世界小说五十八章之后的感想
 【书生剧讨贴】石村之秘 天生至尊 重瞳圣人 太古神禽
@@ -179,8 +162,8 @@
 第一百二十六章 雨族
 第一百二十七章 雨中狩猎
 第一百二十八章 通灵
-第一百二十九章 封印者
-第一百三十章
+
+第一百三十章123456456456
 	</div>
 	<script src="js/all.js"></script>
 	<script>
